--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="min-vh-100">
 
 <head>
-    <title>App Name: A Coding Challenge by Vinay Jain</title>
+    <title>InteRestEasy: A Coding Challenge by Vinay Jain</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,7 @@
     <!-- NAV Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="#"><img src="img/my signature black.png" alt="Vinay Jain Signature" width="" height="26" class="d-inline-block align-text-top"> APP NAME</a>
+            <a class="navbar-brand logoFont" href="#"><img src="img/my signature black.png" alt="Vinay Jain Signature" width="" height="26" class="d-inline-block align-text-top"> InteRestEasy</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/Vinay352/InteRestEasy">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://code-with-vj.netlify.app/">Portfolio</a>
