--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="min-vh-100">
 
 <head>
-    <title>App Name: A Coding Challenge by Vinay Jain</title>
+    <title>InteRestEasy: A Coding Challenge by Vinay Jain</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,7 @@
     <!-- NAV Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand logoFont" href="#"><img src="img/my signature black.png" alt="Vinay Jain Signature" width="" height="26" class="d-inline-block align-text-top"> APP NAME</a>
+            <a class="navbar-brand logoFont" href="#"><img src="img/my signature black.png" alt="Vinay Jain Signature" width="" height="26" class="d-inline-block align-text-top"> InteRestEasy</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/Vinay352/InteRestEasy">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https://code-with-vj.netlify.app/">Portfolio</a>
@@ -59,8 +59,10 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row row-cols-1 row-cols-lg-2 g-5 py-5">
                 <div class="col order-last order-lg-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">APP NAME: A Coding Project</h1>
-                    <h4 class="lead">A JavaScript Coding exercise that uses loops to iterate from 0 to 100, display the numbers and <b>HIGHLIGHT/BOLD</b> even numbers in the range.</h4>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">InteRestEasy: A Coding Project</h1>
+                    <h4 class="lead">
+                        A JavaScript Coding exercise that generates an amortization schedule for an interest loan.
+                    </h4>
 
                     <ul class="fa-ul pt-2 checklist">
                         <li>
@@ -129,7 +131,7 @@
                     </h5>
                 </div>
                 <div class="col">
-                    <img src="img/centumLogo2.png" alt="Centum Logo" class="img-fluid center-block d-block mx-auto" width="400" height="300">
+                    <img src="img/InteRestEasy logo.png" alt="Centum Logo" class="img-fluid center-block d-block mx-auto" width="400" height="300">
                 </div>
            </div>
        </div>
