final image change
final image change

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </h5>
                 </div>
                 <div class="col">
-                    <img src="img/InteRestEasy logo.png" alt="Centum Logo" class="img-fluid center-block d-block mx-auto" width="400" height="300">
+                    <img src="img/inteRestEasy logo 2.png" alt="Centum Logo" class="img-fluid center-block d-block mx-auto" width="500" height="500">
                 </div>
            </div>
        </div>
