--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" target="_blank" href="https://github.com/Vinay352/InteRestEasy">Git Repo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://code-with-vj.netlify.app/">Portfolio</a>
+                        <a class="nav-link" target="_blank" href="https://vinayjaindev.netlify.app/">Portfolio</a>
                     </li>
                 </ul>
             </div>
