--- a/index.html
+++ b/index.html
@@ -177,18 +177,18 @@
                         </div>
 
                         <!-- YouTube -->
-                        <!-- <div class="col social">
-                            <a target="_blank" href="#">
+                        <div class="col social">
+                            <a target="_blank" href="https://www.youtube.com/channel/UCwtYpfoWLjdDA_dcBBOq0fA">
                                 <i class="fab fa-youtube fa-2x"></i>
                             </a>
-                        </div> -->
+                        </div>
 
                         <!-- Instagram -->
-                        <!-- <div class="col social">
-                            <a target="_blank" href="#">
+                        <div class="col social">
+                            <a target="_blank" href="https://www.instagram.com/vinay_jain_dev/">
                                 <i class="fab fa-instagram fa-2x" ></i>
                             </a>
-                        </div> -->
+                        </div>
                         
                     </div>
                 </div>
